--- a/less/contact-section.less
+++ b/less/contact-section.less
@@ -38,6 +38,7 @@
 .contact-info-list {
     margin-bottom: 30px;
     margin-bottom: 45px;
+    margin-left: 65px;
     .custom-icon {
         width: 46px;
         height: 46px;
@@ -50,6 +51,7 @@
         margin-bottom: 15px;
         font-weight:600;
         padding-top:10px;
+
     }
     .info {
         display: block;
