--- a/less/responsive.less
+++ b/less/responsive.less
@@ -66,7 +66,7 @@
     }
     
     .header-info-list .custom-icon {
-        font-size: 26px;
+        font-size: 26px;       
     }
     
     .header-info-list .info-item {
@@ -74,12 +74,29 @@
         margin-bottom: 15px;
         margin-right: 0;
         padding-left: 34px;
-    }  
-  
+    }    
     
     .contact-form {
         padding: 0px;
         background: none;
+    }
+
+    .contact-info-list  {
+        margin-right: 4.5em;
+    }
+
+    .contact-info-list .info {
+        margin-right: 1.75em;        
+    }
+
+    #email-icon-contact {
+        margin-right: 1.25em;
+        margin-top: 15px;
+      
+    }  
+
+    .contact-info-list .item #phone-number {
+        margin-left: 0.75em;             
     }
     
     .footer-col {
